Fix image height and cropping

--- a/src/components/Shelf/ShelfProduct/style.less
+++ b/src/components/Shelf/ShelfProduct/style.less
@@ -9,10 +9,11 @@
     border-radius: 2.5px;
     background: #F6F6F6;
     position: relative;
-    min-height: 300px;
+    min-height: 360px;
+    overflow: hidden;
 
     @media (min-width: @screen-md-min) {
-      min-height: 400px;
+      min-height: 245px;
     }
   }
 
@@ -26,10 +27,6 @@
     position: absolute;
     height: auto;
     width: 100%;
-
-    @media (max-width: 540px) {
-      width: 95%;
-    }
   }
 
   &__content {
@@ -54,7 +51,7 @@
     color: #75CCB1;
     display: block;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 600;
     padding-top: 5px;
     padding-left: 0;
 
